# assetman

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  test_settings
.github/workflows/: test.yml
assetman/: S3UploadThread.py  __init__.py  compile.py  compilers.py  managers.py  manifest.py  settings.py  tools.py
assetman/django_assetman/: models.py
assetman/django_assetman/templatetags/: assetman_tags.py
assetman/parsers/: base.py  django_parser.py  tornado_parser.py
assetman/tests/: django_test_settings.py  django_test_template.html  test_compiler.py  test_django_templates.py  test_manifest.py  test_settings  test_settings.py  test_shunt.py  test_tools.py  test_tornado_templates.py  tornado_test_template.html
assetman/tests/django_templates/: django_test_template.html
assetman/tests/static_dir/: test.css
assetman/tests/tornado_templates/: tornado_test_template.html
assetman/tornadoutils/: RequestHandler.py  __init__.py  helpers.py  static.py
demo/: main.py
docs/: Makefile
docs/source/: compiling.rst  conf.py  index.rst
docs/source/assetman/: compilers.rst  index.rst  managers.rst  manifest.rst  settings.rst  tools.rst
docs/source/parsers/: index.rst
scripts/: compile  invalidate_cloudfront_assets.py  watch_handlebars.js
