[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyassetman"
description = "assetman assetmanager"
version = "0.3.0rc1"
authors = [
  { name="Will McCutchen", email="wm@bit.ly" },
]
maintainers = [
  { name="Jehiah Czebotar", email="jehiah@gmail.com"},
  { name="Josh Harshman", email="josh.harshman@bit.ly"}
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
  "boto3>=1.10.0",
  "tornado>=5.1.1",
]

[tool.setuptools]
packages = ["assetman", "assetman.parsers", "assetman.tornadoutils"]

